--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Compiled code
-build
+dist
 
 # Dependency directory
 node_modules
@@ -9,3 +9,6 @@ node_modules
 
 # The .env file
 .env
+
+# Cache files
+.cache
