--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "name": "typescript-react-client",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "build": "tsc && npm run inject",
-    "inject": "postbuild -i src/index.html -o build/index.html -j build -H",
-    "dev": "nodemon"
+    "prebuild": "rm -rf dist",
+    "build": "parcel build src/index.html --out-dir dist --experimental-scope-hoisting",
+    "dev": "npm run prebuild && parcel serve src/index.html --out-dir dist --port 3000 --open"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
@@ -17,14 +13,9 @@
     "react-dom": "^16.6.1"
   },
   "devDependencies": {
-    "@types/hapi": "^17.6.3",
-    "@types/inert": "^5.1.2",
-    "copyfiles": "^2.1.0",
-    "hapi": "^17.7.0",
-    "inert": "^5.1.2",
-    "nodemon": "^1.18.6",
-    "postbuild": "^2.1.0",
-    "ts-node": "^7.0.1",
+    "less": "^3.8.1",
+    "parcel-bundler": "^1.10.3",
+    "sass": "^1.14.3",
     "typescript": "^3.1.6"
   }
 }
