Basic apollo client project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["dom", "es2016", "esnext.asynciterable"],
     "allowSyntheticDefaultImports": true,
     "jsx": "react"
   }
