--- a/package.json
+++ b/package.json
@@ -2,17 +2,27 @@
   "name": "typescript-react-client",
   "version": "1.0.0",
   "scripts": {
-    "prebuild": "rm -rf dist",
     "build": "parcel build src/index.html --out-dir dist --experimental-scope-hoisting",
-    "dev": "npm run prebuild && parcel serve src/index.html --out-dir dist --port 3000 --open"
+    "dev": "parcel serve src/index.html --out-dir dist --port 3000 --bundle-node-modules --open"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.3.9",
+    "apollo-client": "^2.4.5",
+    "apollo-link-batch-http": "^1.2.3",
+    "apollo-link-error": "^1.1.1",
+    "apollo-link-state": "^0.4.2",
+    "prop-types": "^15.6.2",
     "react": "^16.6.1",
-    "react-dom": "^16.6.1"
+    "react-apollo": "^2.2.4",
+    "react-dom": "^16.6.1",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
+    "@types/graphql": "^14.0.3",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "parcel-bundler": "^1.10.3",
     "sass": "^1.14.3",
     "typescript": "^3.1.6"
