--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "parcel serve src/index.html --out-dir dist --port 3000 --bundle-node-modules --open"
   },
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
     "apollo-cache-inmemory": "^1.3.9",
     "apollo-client": "^2.4.5",
     "apollo-link-batch-http": "^1.2.3",
@@ -21,6 +23,7 @@
     "@types/graphql": "^14.0.3",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/react-router-dom": "^4.3.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "parcel-bundler": "^1.10.3",
