--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "build": "parcel build src/index.html --out-dir dist --experimental-scope-hoisting",
-    "dev": "parcel serve src/index.html --out-dir dist --port 3000 --bundle-node-modules --open"
+    "dev": "parcel serve src/index.html --out-dir dist --port 3000 --open",
+    "test": "jest"
   },
   "dependencies": {
     "@material-ui/core": "^3.5.1",
@@ -21,13 +22,16 @@
   },
   "devDependencies": {
     "@types/graphql": "^14.0.3",
+    "@types/jest": "^23.3.9",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-router-dom": "^4.3.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "jest": "^23.6.0",
     "parcel-bundler": "^1.10.3",
     "sass": "^1.14.3",
+    "ts-jest": "^23.10.4",
     "typescript": "^3.1.6"
   }
 }
