Add component tests

--- a/package.json
+++ b/package.json
@@ -14,18 +14,23 @@
     "apollo-link-batch-http": "^1.2.3",
     "apollo-link-error": "^1.1.1",
     "apollo-link-state": "^0.4.2",
-    "prop-types": "^15.6.2",
     "react": "^16.6.1",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.6.1",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/graphql": "^14.0.3",
     "@types/jest": "^23.3.9",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/react-router": "^4.4.1",
     "@types/react-router-dom": "^4.3.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "jest": "^23.6.0",
